# post-engine

./: .gitignore  README.md  pyproject.toml
.playwright-mcp/: page-2026-07-10T15-06-42-162Z.yml  page-2026-07-10T15-13-04-460Z.yml  page-2026-07-10T15-25-23-201Z.yml  page-2026-07-10T15-25-38-696Z.yml  page-2026-07-10T15-25-51-500Z.yml  page-2026-07-10T15-26-05-815Z.yml  page-2026-07-10T15-26-19-252Z.yml
.ua/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
docs/: LLM_USAGE.md  LLM_execution.md  PLANO_Stepper-de-prompts.md  PLAN_ISOLAMENTO_CONTEXTO_LLM.md  PLAN_REMOVE_CONTENT_GENERATE.md  PLAN_UPDATE_POST_ENGINE_OUTPUT.MD  PRD.md  PROPOSTA_EVOLUCAO_ENTREVISTA_ADAPTATIVA.md  V3_EVO.md  prompt-registry-inventory.json  prompts_inventory.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
scripts/: gui.fish  reorganize_specs.py  run_interview_quality_eval.py
specs/: checklist.md  global.md
tests/: llm_fakes.py  test_adjust_segments_bulk.py  test_agent_wrapper_cursor.py  test_calculator.py  test_cli.py  test_codex_llm_client.py  test_editorial_composition.py  test_editorial_flow.py  test_generation_v4_prompt.py  test_generator_image_suggestions.py  test_gui_avaliacao.py  test_gui_bulk_adjust.py  test_gui_editorial.py  test_gui_llm_config.py  test_gui_slidemark_export.py  test_interview_exploration.py  test_interview_extension_batch.py  test_interview_extraction.py  test_interview_gaps.py  test_interview_gateway.py  test_interview_heuristic.py  test_interview_quality.py  (+22 more)
(+313 files in other folders)
