[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "post_engine"
version = "0.1.0"
description = "Engine de entrevista autoral para geracao de conteudo humano"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "textual>=0.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
    "slidemark_integration: validates and renders with the local SlideMark checkout",
]
